--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-custom-scrollbars",
+  "name": "react-custom-touch-scrollbars",
   "version": "4.2.1",
-  "description": "React scrollbars component",
+  "description": "React scrollbars component with touch support",
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib dist",
@@ -11,12 +11,11 @@
     "lint": "eslint src test examples",
     "test": "cross-env NODE_ENV=test karma start",
     "test:watch": "cross-env NODE_ENV=test karma start --auto-watch --no-single-run",
-    "test:cov": "cross-env NODE_ENV=test COVERAGE=true karma start --single-run",
-    "prepublish": "npm run lint && npm run test && npm run clean && npm run build && npm run build:umd && npm run build:umd:min && node ./prepublish"
+    "test:cov": "cross-env NODE_ENV=test COVERAGE=true karma start --single-run"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/malte-wessel/react-custom-scrollbars.git"
+    "url": "https://github.com/SVehrenkamp/react-custom-scrollbars"
   },
   "keywords": [
     "scroll",
@@ -29,9 +28,9 @@
   "author": "Malte Wessel",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/malte-wessel/react-custom-scrollbars/issues"
+    "url": "https://github.com/SVehrenkamp/react-custom-scrollbars/issues"
   },
-  "homepage": "https://github.com/malte-wessel/react-custom-scrollbars",
+  "homepage": "https://github.com/SVehrenkamp/react-custom-scrollbars",
   "devDependencies": {
     "babel-cli": "^6.2.0",
     "babel-core": "^6.2.1",
